--- a/Style.css
+++ b/Style.css
@@ -28,6 +28,12 @@ h1 {
     justify-content: center;
     margin-top: 120px;
     font-size: x-large;
+    background: -webkit-linear-gradient(to right, #5D26C1, #a17fe0, #59C173);
+    background: linear-gradient(to right, #5D26C1, #a17fe0, #59C173);
+    -webkit-background-clip: text;
+    -moz-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    -mo-text-fill-color: transparent;
 }
 
 ul.topnav {
