--- a/Style.css
+++ b/Style.css
@@ -8,6 +8,12 @@ img {
     height: 300px;
     width: 300px;
     margin-top: 200px;
+    
+}
+
+img:hover {
+    background-color: yellow;
+    
 }
 
 .image-containe {
@@ -34,6 +40,10 @@ h1 {
     -moz-background-clip: text;
     -webkit-text-fill-color: transparent;
     -mo-text-fill-color: transparent;
+}
+
+a {
+    color: rgba(37, 142, 255, 1);
 }
 
 ul.topnav {
@@ -75,4 +85,37 @@ ul.topnav li a.active {
 
 ul.topnav li.right {
     float: right;
+}
+
+p {
+    background: -webkit-linear-gradient(to right, #5D26C1, #a17fe0, #59C173);
+    background: linear-gradient(to right, #5D26C1, #a17fe0, #59C173);
+    -webkit-background-clip: text;
+    -moz-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    -mo-text-fill-color: transparent;
+}
+
+
+.myButton {
+    background-color: #44c767;
+    border-radius: 28px;
+    border: 1px solid #18ab29;
+    display: inline-block;
+    cursor: pointer;
+    color: #ffffff;
+    font-family: Arial;
+    font-size: 17px;
+    padding: 16px 31px;
+    text-decoration: none;
+    text-shadow: 0px 1px 0px #2f6627;
+}
+
+.myButton:hover {
+    background-color: #5cbf2a;
+}
+
+.myButton:active {
+    position: relative;
+    top: 1px;
 }
